# ekg-classifier

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  config.py  makefile  models.py  protocols.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/cli/: gcp_setup.py  train.py
app/services/: gcp_service.py  training_service.py
electrocardiograms/: README.md  docker-compose.yaml
electrocardiograms/google_cloud/scripts/: cluster_setup.sh
libs/data/: __init__.py  loader.py  preprocessing.py
libs/gcp/: __init__.py  bigquery.py  dataproc.py  storage.py
libs/ml/: __init__.py  evaluation.py  sklearn_trainer.py  spark_trainer.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars
terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
terraform/modules/dataproc/: main.tf  outputs.tf  variables.tf
terraform/modules/gcs/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/integration/: test_training_pipeline.py
tests/unit/: test_config.py  test_models.py
tests/unit/libs/: test_loader.py  test_sklearn_trainer.py
