[project]
name = "ekg-classifier"
version = "0.1.0"
description = "Deep neural network classification model for electrocardiogram signals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "pyspark>=3.5.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "google-cloud-bigquery>=3.14.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-dataproc>=5.8.0",
    "joblib>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.scripts]
ekg-train = "app.cli.train:main"
ekg-gcp-setup = "app.cli.gcp_setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libs", "app", "config.py", "models.py", "protocols.py"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = [
    "local/",
    "tests/",
]
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "pyspark.*",
    "sklearn.*",
    "joblib.*",
    "pandas.*",
    "numpy.*",
    "google.cloud.*",
    "google.api_core.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# google-cloud-dataproc ships typed protos that only accept Cluster/Job messages,
# but the client equally accepts the dict specs used here. Treat it as a boundary.
module = [
    "google.cloud.dataproc_v1",
    "google.cloud.dataproc_v1.*",
]
follow_imports = "skip"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "local/",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
# tests: asserts are the point; temp paths are mocked, never written to
"tests/**" = ["S101", "S108"]

[tool.ruff.lint.isort]
known-first-party = ["libs", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--cov=libs",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
